Issue #45: Austin - Use check mark icon and wrap header text

--- a/src/UI/app/views/DeckPreview/DeckPreview.css
+++ b/src/UI/app/views/DeckPreview/DeckPreview.css
@@ -37,6 +37,15 @@
   background-color: #43A047;
 }
 
-.check-icon {
-  fill: #2196F3;
+.notification-card {
+  padding: 0px;
+}
+
+.notification-card_image {
+  width: 100px;
+  background-color: gainsboro;
+}
+
+.secondary-header-text {
+  width: 70%;
 }
